--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -2215,54 +2215,60 @@
   </div>
 </div>
 
+
 <div [ngStyle]="{'display': isModalOpen('listAllergies') ? 'block' : 'none'}" id="listAllergies" class="modal">
   <div id="mapModalContent" class="modal-content" style="height: 75vh;">
-      <span (click)="closeModal('listAllergies')" class="close">&times;</span>
-      <div>
+    <span (click)="closeModal('listAllergies')" class="close">&times;</span>
+    <div>
 
-        <form  class="row g-3 needs-validation" novalidate="">
-            <div class="col-md-10"></div>
+      <form class="row g-3 needs-validation" novalidate="">      
 
-            <div class="col-md-12">
-              <div class="table-wrapper" >
-                <div class="table-title">
-                <form class="row g-3 needs-validation" novalidate="">
-                <table class="table table-striped table-hover table-over">
-                  <thead>
-                    <tr>
-                      <th>#</th>
-                      <th>Name</th>
-                      <th>Description</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <!--TODO: Está US's é para estar no local do admin, está no doctor temporariamente -->
-                    <tr *ngFor="let request of allergiesList; let i = index" (click)="selectAllergie(request.designacao)" [ngClass]="{ 'selected-row': selectedAllergie === request.designacao }">
-                      <td>{{ i + 1 }}</td>
-                      <td><input class="selectRequest" type="radio" id="allergie_{{ request.designacao }}" name="id" value="{{ request.designacao }}" [checked]="selectedAllergie === request.designacao" hidden>{{ request.designacao }} </td>
-
-                      <td>{{ request.descricao }}</td>
-
-                    </tr>
-                  </tbody>
-                </table>
-                </form>
-              </div>
+        <!-- Tabela -->
+        <div class="col-md-12"  style="overflow: auto; max-height: 60vh; border: 1px solid #ccc; border-radius: 8px; padding: 10px;">
+          <div class="table-wrapper">
+            <div class="table-title">
+              <table class="table table-striped table-hover">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let request of allergiesList; let i = index" 
+                      (click)="selectAllergie(request.id)" 
+                      [ngClass]="{ 'selected-row': selectedAllergie === request.id }">
+                    <td>{{ i + 1 }}</td>
+                    <td>
+                      <input class="selectRequest" 
+                             type="radio" 
+                             id="allergie_{{ request.id }}" 
+                             name="id" 
+                             value="{{ request.id }}" 
+                             [checked]="selectedAllergie === request.id" hidden>
+                      {{ request.designacao }}
+                    </td>
+                    <td>{{ request.descricao }}</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
+        </div>
 
-          <div class="col-md-9"></div>
+        <!-- Botões -->
+        <div class="col-md-9"></div>
           <div class="col-md-3">
             <button class="fs-5 btn btn-outline-warning" (click)="updateAllergy()" > Edit <i class="bi bi-pencil-square"></i></button>
           </div>
           </form>
 
-
-
-        </div>
-
+    </div>
   </div>
 </div>
+
+
 
 
 <div [ngStyle]="{'display': isModalOpen('UpdateAllergyModal') ? 'block' : 'none'}" id="UpdateAllergyModal" class="modal" >
