--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -695,7 +695,7 @@ id="updateAppointmentModal" class="modal">
           <div class="tags-input">
             <input id="tag-filter" type="text" name="filterAllergieName" [(ngModel)]="filterAllergieNameText"
               placeholder="Choose an allergy" (input)="filterAllergieNameOptions()" (focus)="showDropdown = true"
-              (blur)="onBlur()" />
+              (blur)="onBlur('filterAllergie')" />
           </div>
           <ul *ngIf="showDropdown" class="dropdown-list">
             <li *ngFor="let option of filteredAllergieNameOptions"
@@ -717,7 +717,7 @@ id="updateAppointmentModal" class="modal">
           <label for="tag-filter" class="form-label">Allergy Status</label>
           <div class="dropdown">
             <input type="text" name="filterAllergieStatus" id="filterAllergieStatus" [(ngModel)]="filterAllergieStatusText"
-              (input)="filterAllergieStatusOptions()" (focus)="showDropdown3 = true" (blur)="onBlur()"
+              (input)="filterAllergieStatusOptions()" (focus)="showDropdown3 = true" (blur)="onBlur('filterAllergieStatus')"
               placeholder="Filter status" />
             <ul *ngIf="showDropdown3" class="dropdown-list">
               <li *ngFor="let option of filteredAllergieStatusOptions"
@@ -751,7 +751,7 @@ id="updateAppointmentModal" class="modal">
             <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
             <input id="condition-filter" class="form-control" type="text" name="filterMedicalCondiitonDesignacao"
               [(ngModel)]="filterTextCondition" placeholder="Choose an medical condition"
-              (input)="filterOptionsMedicalConditions()" (focus)="showDropdown2 = true" (blur)="onBlur()" />
+              (input)="filterOptionsMedicalConditions()" (focus)="showDropdown2 = true"(blur)="onBlur('filterCondition')" />
               <span class="input-group-text" id="validCondition">{{ validConditionText }}</span>
             <input type="text" class="form-control" id="descricaoCondition"  style="width: 40%;" [(ngModel)]="filterConditionDescricaoText"
               name="descricaoCondition" required readonly />
@@ -773,8 +773,8 @@ id="updateAppointmentModal" class="modal">
         <div class="col-md-2">
           <label for="tag-filter" class="form-label">Medical Condition Status</label>
           <div class="dropdown">
-            <input type="text" name="filterConditionStatus" [(ngModel)]="filterConditionStatusText"
-              (input)="filterConditionStatusOptions()" (focus)="showDropdown4 = true" (blur)="onBlur()"
+            <input type="text" id="registerFilterConditionStatus" name="filterConditionStatus" [(ngModel)]="filterConditionStatusText"
+              (input)="filterConditionStatusOptions()" (focus)="showDropdown4 = true"  (blur)="onBlur('filterStatus')"
               placeholder="Filter status" />
             <ul *ngIf="showDropdown4" class="dropdown-list">
               <li *ngFor="let option of filteredAllergieStatusOptions"
@@ -1058,7 +1058,7 @@ id="updateAppointmentModal" class="modal">
 
           <div class="col-md-9"></div>
           <div class="col-md-3">
-            <button class="fs-5 btn btn-outline-info" (click)="getMedicalRecord()">Filter <i class="bi bi-info-square-fill"></i></button>
+            <button class="fs-5 btn btn-outline-info" id="filterMedicalRecord" (click)="getMedicalRecord()">Filter <i class="bi bi-info-square-fill"></i></button>
             
             <button class="fs-5 btn btn-outline-warning" id="editMedicalRecord" (click)="editMedicalRecord()">Edit <i
                 class="bi bi-pencil-square"></i></button>
@@ -1075,47 +1075,113 @@ id="updateAppointmentModal" class="modal">
   <div [ngStyle]="{'display': isModalOpen('FilterMedicalRecord') ? 'block' : 'none'}" id="FilterMedicalRecord" class="modal">
     <div class="modal-content">
       <span (click)="closeModal('FilterMedicalRecord')" class="close">&times;</span>
-      <form  class="row g-3 needs-validation" novalidate="">
+      <form class="row g-3 needs-validation" novalidate="">
         <div *ngIf="medicalRecordProfile">
+
           <div class="row g-3 needs-validation">
             <div class="col-md-12"></div>
-
-
-
-    
-        
   
-              <!-- Allergies Section -->
-              <div class="col-md-10">
-                <div class="input-group has-validation">
-                  <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
-                  <span class="input-group-text" style="width:60%" id="add">Allergies</span>
-                </div>
-                <table class="table table-striped table-hover table-over-update">
-                  <thead>
-                    <tr>
-                      <th>#</th>
-                      <th>Name</th>
-                      <th>Description</th>
-                      <th>Status</th>
-                    </tr>
-                  </thead>
-                  <tbody>               
-                    <tr *ngFor="let tag of tagsAllergies; let i = index">
-                      <td>{{ i + 1 }}</td>
-                      <td>{{ tag.designacao }}</td>
-                      <td>{{ tag.descricao }}</td>
-                      <td>{{ tag.status }}</td>
-                     
-                    </tr>                
-                  </tbody>
-                </table>
+ 
+            <div class="col-md-4">
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-person-badge-fill"></i></span>
+                <input type="text" class="form-control" id="allergieNameFilter" [(ngModel)]="allergieNameFilter"  [ngModelOptions]="{standalone: true}"  name="allergieNameFilter" required step="1" placeholder="Name" />
               </div>
+            </div>
+  
+            <div class="col-md-4">
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-body-text"></i></span>
+                <input type="text" class="form-control" id="allergieDescriptionFilter" [(ngModel)]="allergieDescriptionFilter"  [ngModelOptions]="{standalone: true}"  name="allergieDescriptionFilter" required step="2" placeholder="Description" />
+              </div>
+            </div>
+  
+            <div class="col-md-4">
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-person-vcard-fill"></i></span>
+                <textarea class="form-control" id="allergieStatusFilter" [(ngModel)]="allergieStatusFilter"  [ngModelOptions]="{standalone: true}"  name="allergieStatusFilter" required rows="1" placeholder="Status"></textarea>
+              </div>
+            </div>
+  
+            <div class="input-group" style="padding:1cm">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
+              <button type="submit" id="filterAllergieMedicalRecord" (click)="onFilterMedicalRecordRequests()" class="btn btn-primary">Apply Allergie Filter</button>
+            </div>
+  
+            <div class="col-md-10">
+              <!-- Tabela de Alergias -->
+              <div class="input-group has-validation">
+                <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
+                <span class="input-group-text" style="width:60%" id="add">Allergies</span>
+              </div>
+              <table class="table table-striped table-hover table-over-update">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let tag of filteredTagsAllergies; let i = index">
+                    <td>{{ i + 1 }}</td>
+                    <td>{{ tag.designacao }}</td>
+                    <td>{{ tag.descricao }}</td>
+                    <td>{{ tag.status }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+
+            <hr>
+  
+  
+            <div class="col-mb-12"></div>
+  
             
-    
+            <div class="col-md-4">
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-person-badge-fill"></i></span>
+                <input type="text" class="form-control" id="medicalConditionCodeFilter" [(ngModel)]="medicalConditionCodeFilter"  [ngModelOptions]="{standalone: true}" name="medicalConditionCodeFilter" required step="1" placeholder="Code" />
+              </div>
+            </div>
+
+           <div class="col-md-4">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-person-badge-fill"></i></span>
+              <input type="text" class="form-control" id="medicalConditionNameFilter"  [(ngModel)]="medicalConditionNameFilter"  [ngModelOptions]="{standalone: true}"   name="medicalConditionNameFilter" required step="1" placeholder="Name"/>
+            </div>
+         </div>
+
   
+            <div class="col-md-4">
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-body-text"></i></span>
+                <input type="text" class="form-control" id="medicalConditionDescriptionFilter" [(ngModel)]="medicalConditionDescriptionFilter"  [ngModelOptions]="{standalone: true}"  name="medicalConditionDescriptionFilter" required step="2" placeholder="Description" />
+              </div>
+            </div>
   
-            <div class="col-mb-4"></div>
+            <div class="col-md-4">
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-person-vcard-fill"></i></span>               
+                <input class="form-control" id="medicalConditionStatusFilter" [(ngModel)]="medicalConditionStatusFilter"  [ngModelOptions]="{standalone: true}"  name="medicalConditionStatusFilter" required rows="1" placeholder="Status" />
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="input-group has-validation">
+                <span  class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
+                <textarea type="text" class="form-control" id="medicalConditionSymptomsFilter" [(ngModel)]="medicalConditionSymptomsFilter"  [ngModelOptions]="{standalone: true}" 
+                 name="medicalConditionSymptomsFilter" required rows="1"
+                  placeholder="Symptoms [Separated by a comma (,)]"></textarea>
+              </div>
+            </div>
+
+            <div class="input-group" style="padding:1cm">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
+            <button type="submit" id="filterConditionMedicalRecord" (click)="onFilterMedicalRecordRequestsConditions()" class="btn btn-primary">Apply Medical Condition Filter</button>
+           </div>
   
   
             <!-- Medical Conditions Section -->
@@ -1136,7 +1202,7 @@ id="updateAppointmentModal" class="modal">
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let condition of tagsConditions; let i = index">
+                  <tr *ngFor="let condition of filteredTagsConditions; let i = index">
                     <td>{{ i + 1 }}</td>
                     <td>{{ condition.codigo }}</td>
                     <td>{{ condition.designacao }}</td>
@@ -1148,6 +1214,12 @@ id="updateAppointmentModal" class="modal">
                 </tbody>
               </table>
             </div>
+
+            <hr>
+  
+  
+            <div class="col-mb-12"></div>
+
 
 
             <div class="col-md-4">
@@ -1273,7 +1345,7 @@ id="updateAppointmentModal" class="modal">
               <div class="tags-input">
                 <input id="tag-filterUpdate" type="text" name="filterAllergieName" [(ngModel)]="filterAllergieNameText"
                   [ngModelOptions]="{standalone: true}" placeholder="Choose an allergy"
-                  (input)="filterAllergieNameOptions()" (focus)="showDropdown = true" (blur)="onBlur()" />
+                  (input)="filterAllergieNameOptions()" (focus)="showDropdown = true" (blur)="onBlur('filterAllergie')" />
               </div>
               <ul *ngIf="showDropdown" class="dropdown-listUpdate">
                 <li *ngFor="let option of filteredAllergieNameOptions"
@@ -1297,7 +1369,7 @@ id="updateAppointmentModal" class="modal">
               <div class="dropdown">
                 <input type="text" name="filterAllergieStatusUpdate" [(ngModel)]="filterAllergieStatusText"
                   [ngModelOptions]="{standalone: true}" (input)="filterAllergieStatusOptions()"
-                  (focus)="showDropdown3 = true" (blur)="onBlur()" placeholder="Filter status" />
+                  (focus)="showDropdown3 = true" (blur)="onBlur('filterAllergieStatus')" placeholder="Filter status" />
                 <ul *ngIf="showDropdown3" class="dropdown-listUpdate">
                   <li *ngFor="let option of filteredAllergieStatusOptions"
                     (mousedown)="selectOptionTagStatusAllergies(option)">
@@ -1351,10 +1423,10 @@ id="updateAppointmentModal" class="modal">
               <div class="input-group has-validation">
                 <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
                 <input id="condition-filterUpdate" class="form-control" type="text" name="filterMedicalCondiitonDesignacao"
-                  [(ngModel)]="filterTextCondition" placeholder="Choose an medical condition"
-                  (input)="filterOptionsMedicalConditions()" (focus)="showDropdown2 = true" (blur)="onBlur()" />
+                  [(ngModel)]="filterTextCondition"  [ngModelOptions]="{standalone: true}"  placeholder="Choose an medical condition"
+                  (input)="filterOptionsMedicalConditions()" (focus)="showDropdown2 = true" (blur)="onBlur('filterCondition')" />
                   <span class="input-group-text" id="validCondition">{{ validConditionText }}</span>
-                <input type="text" class="form-control" id="descricaoConditionUpdate"  style="width: 40%;" [(ngModel)]="filterConditionDescricaoText"
+                <input type="text" class="form-control" id="descricaoConditionUpdate"  style="width: 40%;" [(ngModel)]="filterConditionDescricaoText"  [ngModelOptions]="{standalone: true}" 
                   name="descricaoConditionUpdate" required readonly />
               </div>
               <ul *ngIf="showDropdown2" class="dropdown-list">
@@ -1373,7 +1445,7 @@ id="updateAppointmentModal" class="modal">
               <div class="dropdown">
                 <input type="text" name="filterConditionStatusUpdate" [(ngModel)]="filterConditionStatusText"
                   [ngModelOptions]="{standalone: true}" (input)="filterConditionStatusOptions()"
-                  (focus)="showDropdown4 = true" (blur)="onBlur()" placeholder="Filter status" />
+                  (focus)="showDropdown4 = true" (blur)="onBlur('filterStatus')" placeholder="Filter status" />
                 <ul *ngIf="showDropdown4" class="dropdown-listUpdate">
                   <li *ngFor="let option of filteredAllergieStatusOptions"
                     (mousedown)="selectOptionTagStatusCondition(option)">
@@ -1414,39 +1486,6 @@ id="updateAppointmentModal" class="modal">
 
 
 
-  <!--<div [ngStyle]="{'display': isModalOpen('filterMedicalRecordRequestModal') ? 'block' : 'none'}" id="filterMedicalRecordRequestModal" class="modal">
-  <div class="modal-content">
-
-    <span (click)="closeModal('filterMedicalRecordRequestModal')" class="close">&times;</span>
-    <form (ngSubmit)="onFilterMedicalRecordRequests()">
-
-      <h3 class="text-center">Filter Medical Record</h3>
-      <div class="input-group" style="padding:1cm">
-
-     </div>
-
-
-     <div class="mb-3">
-      <label for="filterAllergies" class="form-label">Allergies:</label>
-      <input type="text" id="filterAllergies" [(ngModel)]="filterMedicalRecord.allergies" name="filterAllergies" class="form-control" />
-    </div>
-
-
-      <div class="mb-3">
-        <label for="filterMedicalCondition" class="form-label">Medical Condition:</label>
-        <input type="text" id="filterMedicalCondition" [(ngModel)]="filterMedicalRecord.medicalConditions"  name="filterMedicalCondition" class="form-control" />
-      </div>
-
-
-
-      <div class="input-group" style="padding:1cm">
-        <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
-      <button type="submit" (click)="onFilterMedicalRecordRequests()" class="btn btn-primary">Apply Filter</button>
-     </div>
-
-    </form>
-  </div>
-</div>-->
 
 
   <div class="container-xxl">
