--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -728,7 +728,7 @@ id="updateAppointmentModal" class="modal">
        
 
         <div class="col-12 offset-md-1">
-          <button type="button" class="btn btn-primary" (click)="addAllergie()" [disabled]="!isAllergieValid()">Add Allergie</button>
+          <button type="button" class="btn btn-primary" (click)="addAllergie('no')" [disabled]="!isAllergieValid()">Add Allergie</button>
         </div>
 
         <div class="col-mb-4"></div>
@@ -793,7 +793,7 @@ id="updateAppointmentModal" class="modal">
 
         </div>
         <div class="col-12 offset-md-1">
-          <button type="button" class="btn btn-primary" (click)="addMedicalCondition()" [disabled]="!isConditionValid()">Add Condition</button>
+          <button type="button" class="btn btn-primary" (click)="addMedicalCondition('no')" [disabled]="!isConditionValid()">Add Condition</button>
         </div>
 
 
@@ -1096,13 +1096,22 @@ id="updateAppointmentModal" class="modal">
                 <textarea class="form-control" id="allergieStatusFilter" [(ngModel)]="allergieStatusFilter"  [ngModelOptions]="{standalone: true}"  name="allergieStatusFilter" required rows="1" placeholder="Status"></textarea>
               </div>
             </div>
+
+            <div class="col-md-6" >
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
+                <textarea class="form-control" id="allergieNoteFilter" [(ngModel)]="allergieNoteFilter"
+                  [ngModelOptions]="{standalone: true}" name="allergieNoteFilter" required rows="1"
+                  placeholder="Note">></textarea>
+              </div>
+            </div>
   
             <div class="input-group" style="padding:1cm">
               <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
               <button type="submit" id="filterAllergieMedicalRecord" (click)="onFilterMedicalRecordRequests()" class="btn btn-primary">Apply Allergie Filter</button>
             </div>
   
-            <div class="col-md-10">
+            <div class="col-md-12">
               <!-- Tabela de Alergias -->
               <div class="input-group has-validation">
                 <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
@@ -1115,6 +1124,7 @@ id="updateAppointmentModal" class="modal">
                     <th>Name</th>
                     <th>Description</th>
                     <th>Status</th>
+                    <th>Notes</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -1123,6 +1133,7 @@ id="updateAppointmentModal" class="modal">
                     <td>{{ tag.designacao }}</td>
                     <td>{{ tag.descricao }}</td>
                     <td>{{ tag.status }}</td>
+                    <td [style.white-space]="'pre-wrap'">{{ tag.note }}</td>    
                   </tr>
                 </tbody>
               </table>
@@ -1172,6 +1183,17 @@ id="updateAppointmentModal" class="modal">
               </div>
             </div>
 
+
+            
+            <div class="col-md-6" >
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
+                <textarea class="form-control" id="medicalConditionNoteFilter" [(ngModel)]="medicalConditionNoteFilter"
+                  [ngModelOptions]="{standalone: true}" name="medicalConditionNoteFilter" required rows="1"
+                  placeholder="Note">></textarea>
+              </div>
+            </div>
+
             <div class="input-group" style="padding:1cm">
               <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
             <button type="submit" id="filterConditionMedicalRecord" (click)="onFilterMedicalRecordRequestsConditions()" class="btn btn-primary">Apply Medical Condition Filter</button>
@@ -1179,7 +1201,7 @@ id="updateAppointmentModal" class="modal">
   
   
             <!-- Medical Conditions Section -->
-            <div class="col-md-10">
+            <div class="col-md-12">
               <div class="input-group has-validation">
                 <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
                 <span class="input-group-text" style="width:60%" id="add">Medical Conditions</span>
@@ -1193,6 +1215,7 @@ id="updateAppointmentModal" class="modal">
                     <th>Description</th>
                     <th>Status</th>
                     <th>Symptoms</th>
+                    <th>Notes</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -1203,45 +1226,14 @@ id="updateAppointmentModal" class="modal">
                     <td>{{ condition.descricao }}</td>
                     <td>{{ condition.status }}</td>
                     <td>{{ condition.sintomas }}</td>
+                    <td [style.white-space]="'pre-wrap'">{{ condition.note }}</td>    
                    
                   </tr>
                 </tbody>
               </table>
             </div>
 
-            <hr>
-  
-  
-            <div class="col-mb-12"></div>
-
-
-
-            <div class="col-md-4">
-              <div class="input-group has-validation">
-                <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
-                <span class="input-group-text" style="width:60%" id="add">Free text</span>
-              </div>
-              
-              <!-- Tabela será exibida apenas se descricaoList tiver itens -->
-              <table *ngIf="descricaoList && descricaoList.length > 0" class="table table-striped table-hover table-over-update" style="scrollbar-width: none;">
-                <thead>
-                  <tr>
-                    <th>#</th>
-                    <th>Description</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let description of descricaoList; let i = index">
-                    <td>{{ i + 1 }}</td>
-                    <td>{{ description }}</td>
-                  </tr>
-                </tbody>
-              </table>
-            
-              <!-- Mensagem para quando não houver dados -->
-              <p *ngIf="descricaoList && descricaoList.length === 0" class="text-muted">No descriptions available.</p>
-            </div>
-            
+               
   
   
           </div>         
@@ -1317,6 +1309,7 @@ id="updateAppointmentModal" class="modal">
                     <th>Name</th>
                     <th>Description</th>
                     <th>Status</th>
+                    <th>Note</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -1325,14 +1318,19 @@ id="updateAppointmentModal" class="modal">
                     <td>{{ tag.designacao }}</td>
                     <td>{{ tag.descricao }}</td>
                     <td>{{ tag.status }}</td>
-                    <td> <button type="button" class="btn btn-danger"
-                        (click)="removeAllergie(i); $event.preventDefault()"> <i class="bi bi-trash"></i> </button></td>
+                    <td [style.white-space]="'pre-wrap'">{{ tag.note }}</td>                    
+                    <td *ngIf="isDoctor"> <button type="button" class="btn btn-danger" 
+                      (click)="removeAllergie(); $event.preventDefault()"> <i class="bi bi-trash"></i>
+                    </button></td>
+                    <td  *ngIf="!isDoctor">  <button type="button" class="btn btn-warning"
+                      (click)="editAllergieNote(tag.designacao); $event.preventDefault()"> <i class="bi bi-pencil"></i>                       
+                    </button></td>
                   </tr>
                 </tbody>
               </table>
             </div>
 
-            <div class="col-mb-4">
+            <div class="col-mb-4" *ngIf="isDoctor">
               <div class="input-group has-validation">
                 <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
                 <input id="tag-filterUpdate" class="form-control" type="text" name="filterAllergieName"
@@ -1352,7 +1350,7 @@ id="updateAppointmentModal" class="modal">
 
            
 
-            <div class="col-md-2">
+            <div class="col-md-2" *ngIf="isDoctor" >
               <div class="input-group has-validation">
                 <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
                 <input id="status-filter" class="form-control" type="text"  name="filterAllergieStatusUpdate" [(ngModel)]="filterAllergieStatusText"
@@ -1367,10 +1365,20 @@ id="updateAppointmentModal" class="modal">
                 </ul>              
             </div>
 
+            <div class="col-md-6" *ngIf="isDoctor">
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
+                <textarea class="form-control" id="allergieNotesUpdate" [(ngModel)]="noteAllergie"
+                  [ngModelOptions]="{standalone: true}" name="allergieNotesUpdate" required rows="1"
+                  placeholder="Note"[disabled]="filterAllergieStatusText !== 'Not Meaningful Anymore' && filterAllergieStatusText !== 'Misdiagnosed'">></textarea>
+              </div>
+            </div>
+
+
 
            
-            <div class="col-12" style="margin-bottom: 30px;">
-              <button type="button" class="btn btn-primary"  id="updateAddAllergie" (click)="addAllergie()" [disabled]="!isAllergieValid()">Add Allergie</button>
+            <div class="col-12" style="margin-bottom: 30px;" *ngIf="isDoctor">
+              <button type="button" class="btn btn-primary"  id="updateAddAllergie" (click)="addAllergie('yes')" [disabled]="!isAllergieValid()">Add Allergie</button>
             </div>
 
              <div class="col-mb-4"></div>
@@ -1391,6 +1399,7 @@ id="updateAppointmentModal" class="modal">
                     <th>Description</th>
                     <th>Status</th>
                     <th>Symptoms</th>
+                    <th>Node</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -1401,15 +1410,19 @@ id="updateAppointmentModal" class="modal">
                     <td>{{ condition.descricao }}</td>
                     <td>{{ condition.status }}</td>
                     <td>{{ condition.sintomas }}</td>
-                    <td> <button type="button" class="btn btn-danger"
-                        (click)="removeMedicalCondition(i); $event.preventDefault()"> <i class="bi bi-trash"></i>
+                    <td [style.white-space]="'pre-wrap'">{{ condition.note }}</td>
+                    <td *ngIf="isDoctor"> <button type="button" class="btn btn-danger" 
+                        (click)="removeMedicalCondition(); $event.preventDefault()"> <i class="bi bi-trash"></i>
+                      </button></td>
+                      <td  *ngIf="!isDoctor">  <button type="button" class="btn btn-warning"
+                        (click)="editMedicalConditionNote(condition.codigo); $event.preventDefault()"> <i class="bi bi-pencil"></i>                       
                       </button></td>
                   </tr>
                 </tbody>
               </table>
             </div>
 
-            <div class="col-mb-4">
+            <div class="col-mb-4" *ngIf="isDoctor">
               <div class="input-group has-validation">
                 <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
                 <input id="condition-filterUpdate" class="form-control" type="text" name="filterMedicalCondiitonDesignacao"
@@ -1429,7 +1442,7 @@ id="updateAppointmentModal" class="modal">
 
             <div class="col-md-12 mt-3"></div>
 
-            <div class="col-md-2">
+            <div class="col-md-2" *ngIf="isDoctor">
               <div class="input-group has-validation">
                 <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
                 <input id="status-filter" class="form-control" type="text" name="filterConditionStatusUpdate"
@@ -1446,8 +1459,17 @@ id="updateAppointmentModal" class="modal">
             </div>
 
 
+            <div class="col-md-6" *ngIf="isDoctor">
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
+                <textarea class="form-control" id="conditionNotesUpdate" [(ngModel)]="noteCondition"
+                  [ngModelOptions]="{standalone: true}" name="conditionNotesUpdate" required rows="1"
+                  placeholder="Note" [disabled]="filterConditionStatusText !== 'Not Meaningful Anymore' && filterConditionStatusText !== 'Misdiagnosed'"></textarea>
+              </div>
+            </div>
+
           
-            <div class="col-md-8">
+            <div class="col-md-8" *ngIf="isDoctor">
               <div class="input-group has-validation">
                 <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
                 <textarea class="form-control" id="medicalConditionSymptomsUpdate" [(ngModel)]="sintomasCodition"
@@ -1456,8 +1478,10 @@ id="updateAppointmentModal" class="modal">
               </div>
 
             </div>
-            <div class="col-12" style="margin-bottom: 30px;">
-              <button type="button" class="btn btn-primary" id="updateAddCondition" (click)="addMedicalCondition()" [disabled]="!isConditionValid()">Add Condition</button>
+
+
+            <div class="col-12" style="margin-bottom: 30px;" *ngIf="isDoctor">
+              <button type="button" class="btn btn-primary" id="updateAddCondition" (click)="addMedicalCondition('yes')" [disabled]="!isConditionValid()">Add Condition</button>
             </div>
 
 
@@ -1474,6 +1498,83 @@ id="updateAppointmentModal" class="modal">
       </form>
     </div>
   </div>
+
+  <div [ngStyle]="{'display': isModalOpen('UpdateOtherDoctorMedicalRecordModalAllergie') ? 'block' : 'none'}" id="UpdateOtherDoctorMedicalRecordModalAllergie"
+  class="modal">
+  <div class="modal-content">
+    <span (click)="closeModal('UpdateOtherDoctorMedicalRecordModalAllergie')" class="close">&times;</span>
+
+    <form class="row g-3 needs-validation" novalidate="">
+      <div *ngIf="medicalRecordProfileUpdate">
+        <div class="row g-3 needs-validation">
+          <div class="col-md-12"></div>
+
+       
+          <div class="col-md-6">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
+              <textarea class="form-control" id="allergieNotesOtherDoctorUpdate" [(ngModel)]="noteAllergie"
+                [ngModelOptions]="{standalone: true}" name="allergieNotesOtherDoctorUpdate" required rows="1"
+                placeholder="Note">
+              </textarea>
+            </div>
+          </div>
+
+
+        </div>
+
+        
+        <div class="col-12" style="margin-top: 30px;">
+          <button type="button" class="btn btn-primary" id="updateAddOtherDoctorAllergie" (click)="updateNoteAllergies()" >Update Allergy Note</button>
+        </div>
+
+
+
+       
+      </div>
+    </form>
+  </div>
+</div>
+
+
+
+
+  <div [ngStyle]="{'display': isModalOpen('UpdateOtherDoctorMedicalRecordModal') ? 'block' : 'none'}" id="UpdateOtherDoctorMedicalRecordModal"
+  class="modal">
+  <div class="modal-content">
+    <span (click)="closeModal('UpdateOtherDoctorMedicalRecordModal')" class="close">&times;</span>
+
+    <form class="row g-3 needs-validation" novalidate="">
+      <div *ngIf="medicalRecordProfileUpdate">
+        <div class="row g-3 needs-validation">
+          <div class="col-md-12"></div>
+
+       
+          <div class="col-md-6">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-clipboard-pulse"></i></span>
+              <textarea class="form-control" id="conditionNotesOtherDoctorUpdate" [(ngModel)]="noteCondition"
+                [ngModelOptions]="{standalone: true}" name="conditionNotesOtherDoctorUpdate" required rows="1"
+                placeholder="Note">
+              </textarea>
+            </div>
+          </div>
+
+
+        </div>
+
+        
+        <div class="col-12" style="margin-top: 30px;">
+          <button type="button" class="btn btn-primary" id="updateAddOtherDoctorCondition" (click)="updateNoteMedicalCondition()" >Update Condition Note </button>
+        </div>
+
+
+
+       
+      </div>
+    </form>
+  </div>
+</div>
 
 
 
