#107 ACTUALLY Obtain room info via selected room

--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -453,7 +453,7 @@ id="updateAppointmentModal" class="modal">
   <div [ngStyle]="{'display': isModalOpen('mapModal') ? 'block' : 'none'}" id="mapModal" class="modal" style=" padding-top: 20px;">
       <div id="mapModalContent" class="modal-content" style="height: 95vh;">
           <span (click)="closeModal('mapModal')" class="close">&times;</span>
-          <button (click)="doTheClick()">Current Stuff?</button>
+          <button (click)="doTheClick()">Substituir a interação com este botão por interação com a tecla "i"</button>
           <input type="datetime-local" class="form-control" id="mapTime" formControlName="mapTime" placeholder="">
           <div #canvasContainer class="canvas-container" id="canvasContainer">
             <div id="parent" hidden>
